Correction texte bulle + alignement egal

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -61,7 +61,7 @@ input[type='range'] {-webkit-appearance: none !important;background:red;height:2
 input[type='range']::-webkit-slider-thumb {-webkit-appearance: none !important;background:blue;height:10px;width:10px;}
 #emotion .input_hidden {position: absolute;left: -9999px;}
 #emotion .selected {background-color: #ccc;}
-#emotion label {display: inline-block;cursor: pointer;}
+#emotion label {display: inline-block;cursor: pointer;vertical-align: top;}
 #emotion label img {padding: 10px;}
 #slider-range,#slider-range2{
 	margin-top:20px;
